# ftx-history-collector

./: Cargo.toml  README.md
src/: main.rs
