[package]
name = "ftx-history-downloder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive"] }
surf = "2.3.2"
log = "0.4.14"
env_logger = "0.7.1"
anyhow = "1.0.56"
hmac-sha256 = "1.1.2"
hex = "0.4.3"
csv-async = { version = "1.2.4", features = ["tokio", "with_serde"] }